# trimmer-and-thumbnail-gen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: img.rs  main.rs  video.rs
static/: config.json
static/characters/: attribution.txt
