[package]
name = "trimmer-and-thumbnail-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.31"
cached = "0.56.0"
iced = { version = "0.13.1", features = ["tokio", "image"] }
image = "0.25.6"
imageproc = "0.25.0"
rfd = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.47.1"
